@@ -32,8 +32,8 @@ public class SubstitutionPattern extends AbstractPattern {
    * @param pattern the regular expression as a String
    * @param values the values to use in case of a match
    */
-  public SubstitutionPattern(final String pattern, final List<?> values) throws PatternSyntaxException {
-    super(pattern, values);
+  public SubstitutionPattern(final String pattern, final List<?> values, String permissionName) throws PatternSyntaxException {
+    super(pattern, values, permissionName);
   }
 
   /*
