@@ -1,9 +1,6 @@
 # Plugin messages
 chatreplace.description: Alter chat messages with regular expressions.
-chatreplace.no-patterns: no patterns
-chatreplace.one-pattern: one pattern
-chatreplace.many-patterns: {0,number} patterns
-chatreplace.patterns-loaded: {0} loaded into memory.
+chatreplace.patterns-loaded: Patterns loaded: {0}
 
 # ReloadCommand
 reloadcommand.name: reload
