@@ -1,5 +1,6 @@
 Changelog for ChatReplace (v1.2.2-SNAPSHOT)
 
+2012-08-05 19:16:52 +0100    add summary of loaded messages to log (James Richardson)
 2012-08-05 18:58:17 +0100    fix NPE when loading configuration (James Richardson)
 2012-08-05 09:56:26 +0100    finished refactoring (James Richardson)
 2012-08-05 09:49:58 +0100    support async chat events (James Richardson)
